# AED-PROJECT-ScheduleManager

./: CMakeLists.txt  Doxyfile
classes/: Class.cpp  CourseManager.cpp  Student.cpp  Uc.cpp  main.cpp
data/: changes.csv  students_classes.csv
docs/html/: CourseClass_8cpp.html  CourseClass_8cpp__incl.dot  CourseClass_8h.html  CourseClass_8h__dep__incl.dot  CourseClass_8h__incl.dot  CourseClass_8h_source.html  CourseManager_8cpp.html  CourseManager_8cpp__incl.dot  CourseManager_8h.html  CourseManager_8h__dep__incl.dot  CourseManager_8h__incl.dot  CourseManager_8h_source.html  CourseUnit_8cpp.html  CourseUnit_8cpp__incl.dot  CourseUnit_8h.html  CourseUnit_8h__dep__incl.dot  CourseUnit_8h__incl.dot  CourseUnit_8h_source.html  Period_8cpp.html  Period_8cpp__incl.dot  Period_8h.html  Period_8h__dep__incl.dot  Period_8h__incl.dot  Period_8h_source.html  Request_8cpp.html  Request_8cpp__incl.dot  Request_8h.html  Request_8h__dep__incl.dot  Request_8h__incl.dot  Request_8h_source.html  Student_8cpp.html  Student_8cpp__incl.dot  Student_8h.html  Student_8h__dep__incl.dot  Student_8h__incl.dot  Student_8h_source.html  annotated.html  classCourseClass-members.html  classCourseClass.html  classCourseManager-members.html  (+26 more)
docs/latex/: CourseClass_8cpp.tex  CourseClass_8cpp.tex.tmp  CourseClass_8cpp__incl.dot  CourseClass_8h.tex  (+41 more)
headers/: CourseManager.h
include/: Class.h  CourseClass.h  CourseManager.h  CourseUnit.h  Period.h  Request.h  Student.h  Uc.h
src/: Class.cpp  CourseClass.cpp  CourseManager.cpp  CourseUnit.cpp  Period.cpp  Request.cpp  Student.cpp  Uc.cpp  main.cpp
(+49 files in other folders)
